--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
   <header>
-    <h1>Dale Coral</h1>
-    <p>Documentary & Creative Videographer</p>
+    <h1>Brandt Dell Coral Macalinao</h1>
+    <p>Graphic Designer | Video Editor | Documentary | Creative Videographer</p>
   </header>
 
   <section>
