--- a/index.html
+++ b/index.html
@@ -1,39 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Brandt Dell Coral Macalinao | Videographer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<header>
+  <h1>DALE CORAL</h1>
+  <p>Videographer & Creative Editor</p>
+</header>
 
-  <header>
-    <h1>Brandt Dell Coral Macalinao</h1>
-    <p>Graphic Designer | Video Editor | Documentary | Creative Videographer</p>
-  </header>
+<section>
+  <h2>About Me</h2>
+  <p>
+    I create documentary and culture-focused films that tell real stories
+    through strong visuals and storytelling.
+  </p>
+</section>
 
-  <section>
-    <h2>Portfolio</h2>
-    <iframe 
-      src="https://www.youtube.com/embed/VIDEO_ID" 
-      frameborder="0" 
-      allowfullscreen>
-    </iframe>
-  </section>
+<section>
+  <h2>Featured Work</h2>
+  <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
+</section>
 
-  <section>
-    <h2>About Me</h2>
-    <p>
-      I create documentary and culture-focused videos that tell real stories.
-    </p>
-  </section>
-
-  <section>
-    <h2>Contact</h2>
-    <p>Email: your@email.com</p>
-    <p>Facebook: fb.com/yourpage</p>
-  </section>
-
-</body>
-</html>
+<section class="contact">
+  <h2>Contact</h2>
+  <p>Email: your@email.com</p>
+  <p>Facebook: fb.com/yourpage</p>
+</section>
