--- a/index.html
+++ b/index.html
@@ -1,23 +1,88 @@
-<header>
-  <h1>DALE CORAL</h1>
-  <p>Videographer & Creative Editor</p>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Dale Coral Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+</head>
 
-<section>
-  <h2>About Me</h2>
-  <p>
-    I create documentary and culture-focused films that tell real stories
-    through strong visuals and storytelling.
+<body>
+
+<!-- COVER PAGE -->
+<section class="page cover">
+  <h1>DALE CORAL</h1>
+  <p>VIDEOGRAPHER & VIDEO EDITOR</p>
+  <h3>PORTFOLIO</h3>
+</section>
+
+<!-- ABOUT -->
+<section class="page">
+  <h2>ABOUT ME</h2>
+  <p class="page-number">PAGE 01</p>
+
+  <p class="content">
+    I’m a videographer and editor with experience in production
+    and creative direction. I bring ideas to life through strong visuals,
+    clear storytelling, and hands-on leadership from start to finish.
   </p>
 </section>
 
-<section>
-  <h2>Featured Work</h2>
+<!-- PROJECT -->
+<section class="page">
+  <h2>FEATURED PROJECT</h2>
+  <p class="page-number">PAGE 02</p>
+
   <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
 </section>
 
-<section class="contact">
-  <h2>Contact</h2>
-  <p>Email: your@email.com</p>
-  <p>Facebook: fb.com/yourpage</p>
+<!-- EDUCATION -->
+<section class="page">
+  <h2>EDUCATION</h2>
+  <p class="page-number">PAGE 03</p>
+
+  <p class="content">
+    2022–2024<br>
+    National Institute of Information Technology<br>
+    Professional Diploma in Electronic Communications and Technology
+  </p>
 </section>
+
+<!-- QUOTE PAGE -->
+<section class="page quote">
+  <p>
+    My design style<br>
+    is a reflection of<br>
+    my personality.
+  </p>
+</section>
+
+<!-- CONTACT -->
+<section class="page contact">
+  <h2>CONTACT ME</h2>
+
+  <div class="contact-grid">
+    <div>
+      <strong>Phone</strong>
+      <p>+63 XXX XXX XXXX</p>
+    </div>
+
+    <div>
+      <strong>Email</strong>
+      <p>your@email.com</p>
+    </div>
+
+    <div>
+      <strong>Website</strong>
+      <p>yourwebsite.com</p>
+    </div>
+
+    <div>
+      <strong>Address</strong>
+      <p>Your City, Philippines</p>
+    </div>
+  </div>
+</section>
+
+</body>
+</html>
