--- a/index.html
+++ b/index.html
@@ -11,29 +11,47 @@
 
 <!-- COVER PAGE -->
 <section class="page cover">
-  <h1>DALE CORAL</h1>
-  <p>VIDEOGRAPHER & VIDEO EDITOR</p>
-  <h3>PORTFOLIO</h3>
+  <h1>PORTFOLIO</h1>
+  <h1>Brandt Dell Coral Macalinao</h1>
+  <p>Graphic Designer | Video Editor | Documentary Videographer</p>
+<img src="Assets/IMG_0057.jpg" alt="Dale Coral" class="about-img">
+
 </section>
 
 <!-- ABOUT -->
 <section class="page">
   <h2>ABOUT ME</h2>
-  <p class="page-number">PAGE 01</p>
-
   <p class="content">
-    I’m a videographer and editor with experience in production
-    and creative direction. I bring ideas to life through strong visuals,
-    clear storytelling, and hands-on leadership from start to finish.
+    I’m a graphic designer and video editor with experience in production and creative direction.
+    I bring ideas to life through strong visuals, clear storytelling, and hands-on leadership from 
+    start to finish.
   </p>
+  <img src="Assets/3ad0c162-56cf-47d2-82e0-12a0f8c1087d.jpg" alt="DellCoralPfp.png" class="about-img">
 </section>
 
 <!-- PROJECT -->
 <section class="page">
-  <h2>FEATURED PROJECT</h2>
-  <p class="page-number">PAGE 02</p>
+  <h2>PROJECTS</h2>
+  <img src="Assets/Design 2(Model).png" alt="woman.png" class="about-img">
+  <br>
+  <p>Project Description</p>
+  <br>
+  <p class="title">
+    GLAM Friday Party Visual Identity
+  </p>
+  <p>A bold, modern poster design blending monochrome portraiture with striking geometric accents and 
+    vibrant red highlights. GLAM captures confidence, rhythm, and nightlife energy crafted to instantly 
+    grab attention and set the mood. This design showcases how strong composition, contrast, and 
+    typography can transform an event into a visual experience clients can feel before they arrive. 
+    Perfect for brands that want to look fearless, stylish, and unforgettable.</p>
 
-  <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
+  <img src="Assets/beauty woman design(photoshop).png" alt="woman.png" class="about-img">
+  <p class="title">Beauty, Interupted</p>
+  <p>A bold conceptual poster exploring identity through disruptive typography and high-contrast imagery.
+    Designed to challenge perception and create a strong visual presence for modern branding and 
+    editorial use.</p>
+
+  <img src="Assets/Art Card SF.2.png">
 </section>
 
 <!-- EDUCATION -->
